# knowledge-base-refac

./: .gitignore  .gitmodules  DEPLOY.md  FULL_CONTEXT_GUIDE.md  LOAD_TEST_README.md  README.md  SUBMODULES.md  curl_commands_70_requests.sh  docker-compose.yml  load_test_70_requests.py  load_test_curl.sh  package-lock.json  package.json  pyproject.toml  pythontest.py  resultado_teste_manual_completo.json
ai-services/: Dockerfile  test_document_search.py  test_services.py
ai-services/document-processor/: Dockerfile  pdf_processor.py  pyproject.toml  requirements.txt  teste.py
ai-services/inference/: Dockerfile  mistral_service.py  pyproject.toml  requirements.txt  test_load.py
ai-services/rag/: Dockerfile  pyproject.toml  rag_service.py  requirements.txt
backup_20250805_161420/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/ai/[...path]/: route.ts
frontend/src/app/api/auth/: route.ts
frontend/src/app/api/cache/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/chat/: chatCache.ts  page.tsx  registroschatELK.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: LogoutButton.tsx
frontend/src/components/chat/: ChatContainer.tsx  EnhancedChatInterface.tsx  ModernChatInterface.tsx
frontend/src/components/ui/: card.tsx  loading.tsx  notifications.tsx  scroll-area.tsx
frontend/src/lib/: ai-client.ts  auth.ts  cache-client.ts  cache-server.ts  cache-service.ts  cache-universal.ts  queue-service.ts  rate-limit.ts  session-manager.ts
frontend/src/service/: offlineService.ts
frontend/src/tests/: chat-performance-test.ts
frontend/src/types/: chat.ts
nginx/: docker-compose.yml  nginx.conf
scripts/: advanced-performance-test.js  download_model.sh  install_dependencies.sh  setup.sh  setup_dolphin.sh  test-document-storage.js  test_pipeline.py
