[project]
name = "knowledge-base-refac"
version = "0.1.0"
description = ""
authors = [
    {name = "venysssssssssss",email = "viniciussport2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (==2.4.0)",
    "transformers (>=4.54.0,<5.0.0)",
    "accelerate (>=1.9.0,<2.0.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "unstructured (>=0.18.11,<0.19.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "numpy (>=1.24,<2.3)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "huggingface-hub (>=0.34.2,<0.35.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "torch (>=2.0.0)",
    "transformers (>=4.30.0)",
    "Pillow (>=9.0.0)",
    "sentence-transformers (>=2.2.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "timm (>=1.0.19,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
