[project]
name = "knowledge-base-refac"
version = "0.1.0"
description = ""
authors = [
    {name = "venysssssssssss",email = "viniciussport2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (>=2.0.0)",
    "transformers (>=4.30.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pdfminer (>=20191125,<20191126)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
