[project]
name = "knowledge-base-refac"
version = "0.1.0"
description = ""
authors = [
    {name = "venysssssssssss",email = "viniciussport2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (>=2.0.0)",
    "transformers (>=4.30.0)",
    "qdrant-client (>=1.15.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "Pillow (>=9.0.0)",
    "sentence-transformers (>=2.2.0)",
    "docling (>=2.43.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
